# oqab

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark_results.md  combined_data.csv  test-config.json
.cargo/: config.toml
benches/: file_finder_benchmark.rs
cargo/: config.toml
example/: traverser_example.rs
examples/: config.json  traverser_example.rs
src/: advanced.rs  cli.rs  composite.rs  config.rs  excel_processor.rs  file_system.rs  finder.rs  lib.rs  main.rs  models.rs  observers.rs  search_engine.rs  traverser.rs
src/cli/: args.rs  help_text.rs  mod.rs
src/commands/: advanced_search.rs  fuzzy.rs  grep.rs  help.rs  mod.rs  search.rs  standard_search.rs
src/core/: builder.rs  config.rs  factory.rs  finder.rs  mod.rs  observer.rs  platform.rs  registry.rs  singleton.rs  traversal.rs  worker.rs
src/filters/: composite.rs  date.rs  extension.rs  mod.rs  name.rs  regex.rs  size.rs
src/search/: advanced.rs  composite.rs  finder.rs  mod.rs  service.rs
src/search/advanced/: builder.rs  factory.rs  finder.rs  mod.rs  observer.rs  registry.rs  traversal.rs  worker.rs
src/utils/: mod.rs  standard_search.rs
tests/: config_test.rs  filters_test.rs  integration_test.rs  observer_test.rs
tests/helpers/: mock.rs  mod.rs
